<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Decoriss</string>
    <string name="first_page">ویژه ها</string>
    <string name="action_bar_title">دکوریس</string>
    <string name="fifth_page">مقاله</string>
    <string name="search_in_decoriss">جستجو در محصولات</string>
    <string name="group">انتخاب دسته</string>
    <string name="all">همه ی دسته ها</string>
    <string name="add_filter">نمایش براساس</string>
    <string name="user_name">نام کاربری :</string>
    <string name="enter_email_address">آدرس ایمیل خود را وارد کنید</string>
    <string name="enter_password">پسورد خود را وارد کنید</string>
    <string name="enter">ورود</string>
    <string name="login">ثبت نام</string>
    <string name="forget_password">رمز عبور را فراموش کرده ام !</string>
    <string name="your_basket">سبد خرید شما</string>
    <string name="total_price">جمع کل خرید</string>
    <string name="confirm_to_delete">آیا مایل به حذف محصول از سبد خرید هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="finish_shopping">خرید خود را نهایی کنید</string>
    <string name="number_of_shopping_items">تعداد :</string>
    <string name="delete">حذف</string>
    <string name="price">قیمت :</string>
    <string name="price_off">تخفیف :</string>
    <string name="bye">خرید</string>
    <string name="decoriss">دکوریس</string>
    <string name="update_decoriss">آپدیت دکوریس</string>
    <string name="pm_to_friend">پیام به دوست</string>
    <string name="share">ارسال</string>
    <string name="text_to_send">متن مورد نظر خود را وارد کنید سپس کلید ارسال را فشار دهید</string>
    <string name="text_to_advertise">برای مشاهده تنوع بی نظیری از محصولات مبلمان و تزئینات , نرم افزار \" دکوریس \" را دانلود کنید:</string>
    <string name="empty_basket">سبد خرید شما خالی است!</string>
    <string name="invoice_number">شماره ی فاکتور : %1$s </string>
    <string name="same_goods">محصولات مشابه</string>
    <string name="LinkDownloadApp">http://cafebazaar.ir/app/?id=ir.rastanco.mobilemarket&amp;ref=share</string>
    <string name="information">توضیحات:</string>
    <string name="visions">نظرات:</string>
    <string name="features">ویژگی های محصول</string>
    <string name="rank_of_product">ارزیابی تولیدکننده :</string>
    <string name="your_account">حساب کاربری شما</string>
    <string name="thanks">سپاسگزار</string>
    <string name="pleaseLogin">لطفا با حساب کاربری خود وارد شوید</string>
    <string name="sure_to_exit">مطمئنی؟</string>
    <string name="welcome_to_decoriss">کاربر گرامی خوش آمدید</string>
    <string name="please_wait_message">بارگذاری اولیه ممکن است چند دقیقه طول بکشد</string>
    <string name="please_wait">لطفا منتظر بمانید . . .</string>
    <string name="downloadFile">در حال دانلود فایل . . .</string>
    <string name="similar_photos">مشاهده سایر محصولات</string>
    <string name="filterBrandTitle">برند</string>
    <string name="filterPriceTitle">قیمت</string>
    <string name="checkConnection">لطفا اتصال اینترنت خود را بررسی کنید</string>
    <string name="firstTimeStamp">1352689345</string>
    <string name="firstArticleNumber">25</string>
    <string name="no_product_to_show">این مجموعه فعلا فاقد محصول است</string>
    <string name="choose_group">انتخاب دسته</string>
    <string name="filter">براساس</string>
    <string name="choose_brand">انتخاب برند</string>
    <string name="choose_price">انتخاب محدوده قیمت</string>
    <string name="price_for_you">قیمت برای شما :</string>
    <string name="previous_shopped_items">خریدهای گذشته من</string>
    <string name="liked">علاقه مندی ها</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="try_more">دوباره تلاش کنید</string>
    <string name="not_correct">نام کاربری یا رمز عبور صحیح نمی باشد</string>
    <string name="coming_soon">به زودی</string>
    <string name="brand">brand</string>
    <string name="over10million">بالاتر از 10 میلیون تومان</string>
    <string name="up_to10million">تا سقف 10 میلیون تومان</string>
    <string name="up_to5million">تا سقف 5 میلیون تومان</string>
    <string name="up_to1million">تا سقف 1 میلیون تومان</string>
    <string name="password">کلمه عبور:</string>
    <string name="update">آپدیت دکوریس</string>
    <string name="search">جست و جو</string>
    <string name="shoppingBag">سبد خرید</string>
    <string name="userProfile">پروفایل کاربری</string>
    <string name="cancel_search_dialuge">cancel_search_dialuge</string>
    <string name="productFullScreenPhoto">تصویر کامل محصول</string>
    <string name="thisProductHasOffer">تخفیف</string>
    <string name="imageQuality">درجه کیفی محصول</string>
    <string name="shareCurrentProduct">اشتراک گذاری این محصول</string>
    <string name="shareByTelegram">ارسال با تلگرام</string>
    <string name="addProductToFavorits">افزودن به علاقه مندی ها</string>
    <string name="informationOfCurrentProduct">اطلاعات محصول</string>
    <string name="exitInfoPage">خروج</string>
    <string name="checkNextProduct">محصول بعدی</string>
    <string name="previousProduct">محصول قبلی</string>
    <string name="logo">دکوریس</string>
    <string name="articles">مقاله</string>
    <string name="reload">بارگذاری</string>
    <string name="previousShoppedItems">خریدهای گذشته</string>
    <string name="accountPicture">تصویر</string>
    <string name="productPicture">تصویر محصول</string>
    <string name="titleOfCurrentProduct">%1$s</string>
    <string name="shoppingBagAdapterPriceForYou">%1$s  تومان </string>
    <string name="FullScreenImageAdapterproductOriginalPrice">قیمت : %1$s  تومان</string>
    <string name="shoppingBagActivityFinalPrice">%1$s  تومان</string>
    <string name="eachPrice">%1$s</string>
    <string name="visitInSite">مشاهده در سایت</string>
    <string name="info">%1$s تومان</string>
    <string name="user_comments">توضیحات محصول</string>
    <string name="information_of_this_product">نظرات کاربران</string>
    <string name="loading">در حال بارگزاری اطلاعات</string>
    <string name="noBrandMatches">دسته ی "%1$s" فاقد برند میباشد!</string>
    <string name="nobrand">فاقد برند می باشد</string>
    <string name="this_group">دسته </string>
    <string name="message_no_telegram_in_mobile">برنامه ی تلگرام روی گوشی شما نصب نمی باشد</string>

    <!-- Dialog box Rate Us -->
    <string name="rateUsDialogTitle">آیا مایلید به دکوریس امتیاز دهید ؟</string>
    <string name="rateUsDialogYes">بله امتیاز می دهم</string>
    <string name="rateUsDialogNo">نه فعلا</string>

    <!--intro sliding strings-->
    <string name="skip">بی خیال</string>
    <string name="next">چه خوب</string>
    <string name="start">بزن بریم</string>

    <string name="slide_1_title">خوش آمدید!</string>
    <string name="slide_1_desc">دوست گرامی سلام،
برای آشنایی بیشتر با دکوریس، لطفا صفحات بعدی رو مطالعه کن.

    </string>

        <string name="slide_2_title">بررسی آسان</string>
        <string name="slide_2_desc">شما می توانید به آسانی محصولات تولیدکنندگان مبلمان و صنایع چوبی را بررسی کنید و همه اطلاعات لازم برای یک انتخاب درست را به دست بیاورید


    </string>

        <string name="slide_3_title">ارتباط با تولیدکننده</string>
        <string name="slide_3_desc">می توانید به طور مستقیم با تولیدکنندگان در ارتباط باشید و سفارش خود را به صورت آنلاین و یا حضوری تکمیل کنید
    </string>

        <string name="slide_4_title">کارشناس دکوریس

    </string>
        <string name="slide_4_desc">در هر موردی اگر سوالی داشتید می توانید با استفاده از دکمه راهنما از کارشناس دکوریس پرسش کنید</string>
        <string name="home">خانه</string>
        <string name="specials">محصولات ویژه</string>
        <string name="visitAllProduct">همه ی محصولات</string>
        <string name="sellers">تامین کننده ها</string>
        <string name="mostSelled">پرفروش ترین ها</string>
        <string name="rate_us">رای می دهم</string>
        <string name="offer">فروش ویژه</string>
        <string name="agree">موافقم</string>
        <string name="title_activity_product_info">ProductInfoActivity</string>
        <string name="title_activity_info">InfoActivity</string>
        <string name="info_icon">مشاهده اطلاعات محصول و ارتباط با پشتیبان</string>
    <string name="chat_with_admin">ارتباط با کارشناس فروش</string>
</resources>




