<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_logo"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/logo"
        android:padding="10dp"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="10">

            <TextView
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:id="@+id/txt_usernametitle"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                 />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true">
            </LinearLayout>
            <EditText
                android:layout_width="0dp"
                android:textSize="13dp"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:hint="@string/enter_email_address"
                android:layout_weight="7"
                android:gravity="center_vertical|center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:padding="5dp">
            <TextView
                android:layout_width="0dp"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/txt_passwordTitle"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                 />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true">
            </LinearLayout>
            <EditText
                android:layout_width="0dp"
                android:textSize="13dp"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:hint="@string/enter_password"
                android:layout_below="@+id/img_logo"
                android:layout_weight="7"
                android:gravity="center_horizontal|center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/content">

            <Button
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:id="@+id/btn_login"
                android:background="@drawable/user_profile_buttons"
                />
    <Space
    android:layout_width="10dp"
    android:layout_height="match_parent" />
            <Button
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btn_enter"
                android:background="@drawable/user_profile_buttons"
                 />

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:gravity="center"
    >
    <Button
        android:textSize="15dp"
        android:background="@drawable/user_profile_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:id="@+id/btn_forgot"
        android:gravity="center_horizontal|center_vertical"
        />
            </LinearLayout>
            </LinearLayout>