<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="300dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:orientation="horizontal"
    android:weightSum="10"
    android:background="@color/white">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:text="@string/pm_to_friend"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_gravity="right|center_vertical"/>
    <ImageButton
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="3dp"
        android:background="@color/white"
        android:id="@+id/close_pm_to_friend"
        android:src="@mipmap/ic_cancel_dialog"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/orange">
    </LinearLayout>

    <EditText
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:maxLines="12"
        android:textSize="13dp"
        android:textColor="@color/black"
        android:id="@+id/text_to_send"
        android:hint="@string/text_to_send"
        android:padding="4dp"/>
    <Button
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_my_pm"
        android:text="@string/share"
        android:textColor="@color/black"/>
</LinearLayout>