<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_window"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@color/white"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:background="@color/white">


                    <ImageView
                        android:id="@+id/img_picProduct"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/productPicture"
                        android:background="@color/white" />

                    <ImageButton
                        android:id="@+id/ic_offer_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="true"
                        android:background="@null"
                        android:contentDescription="@string/thisProductHasOffer"
                        android:foregroundGravity="top|left"
                        android:src="@mipmap/offer_icon_right_special_full_screen_page"
                        android:visibility="visible" />

                    <!--<ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_horizontal|center_vertical"
                        android:id="@+id/prograssBar"
                        android:background="@color/white"
                        android:layout_centerInParent="true"/>-->


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp"
                    android:weightSum="3">



                    <ImageButton
                        tools:ignore="NestedWeights"
                        android:id="@+id/imageButton_like_specialPage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_like_toolbar"
                        android:background="@null"
                        android:contentDescription="@string/liked"
                        />
                    <ImageButton
                        tools:ignore="NestedWeights"
                        android:id="@+id/imageButton_share"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="@string/share"
                        android:src="@mipmap/ic_share_toolbar" />
                    <ImageButton
                        android:id="@+id/basket_toolbar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="@string/bye"
                        android:src="@mipmap/bye_toolbar" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

