<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="5dp"
        card_view:contentPadding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:contentDescription="@string/logo"
                        android:src="@drawable/logo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:weightSum="10">

                    <ir.rastanco.mobilemarket.utility.FontTextView
                        android:id="@+id/userName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        tools:ignore="NestedWeights"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingRight="5dp"
                        android:text="@string/user_name"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@android:color/transparent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center_vertical|center_horizontal"
                        android:hint="@string/enter_email_address"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:weightSum="10">

                    <ir.rastanco.mobilemarket.utility.FontTextView
                        tools:ignore="NestedWeights"
                        android:id="@+id/txt_passwordTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingRight="5dp"
                        android:text="@string/password"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@android:color/transparent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>


                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_below="@+id/img_logo"
                        android:layout_weight="7"
                        android:gravity="center_horizontal|center_vertical"
                        android:hint="@string/enter_password"
                        android:paddingLeft="5dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btn_forgot"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/forget_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="10">

                    <LinearLayout
                        tools:ignore="NestedWeights"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:background="@drawable/user_profile_buttons"
                        android:text="@string/enter"
                        android:textSize="@dimen/textSize" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/btn_enter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:background="@drawable/user_profile_buttons"
                        android:text="@string/login"
                        android:textSize="@dimen/textSize" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
